[project]
name = "mp4-moov-optimize-GUI"
version = "1.0.0"
description = "make mp4 video play fast(Move `moov` atom before `mdat`)"
authors = [
    {name = "feng", email = "zoollcar@qq.com"},
]
dependencies = [
    "FreeSimpleGui>=5.1.1",
    "pyinstaller>=6.10.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
